# keylogger-api

./: .env  Cargo.toml  README.md
src/: main.rs
src/errors/: api_error.rs  mod.rs
src/models/: info.rs  mod.rs
src/routes/: info_routes.rs  mod.rs
