[package]
name = "key-api"
version = "0.1.0"
authors = ["Jose Aparcana <josered30@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel_migrations = "1.4.0"
env_logger = "0.7.1"
listenfd = "0.3.3"
log = "0.4.11"
serde = "1.0.114"
serde_json = "1.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
hex = "0.3.2"
futures = "0.3.5"
actix-cors = "0.2.0"
