[package]
name = "key-api"
version = "0.1.0"
authors = ["Jose Aparcana <josered30@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
dotenv = "0.15"
env_logger = "0.7.1"
listenfd = "0.3.3"
log = "0.4.11"
serde = "1.0.114"
serde_json = "1.0"
futures = "0.3.5"
actix-cors = "0.2.0"
walkdir = "2"
